--- a/2.html
+++ b/2.html
@@ -37,80 +37,7 @@
       <li>점심식사 12시~ 13시 </li>
       <li>저녁 18시~19시 </li>
       <h2>전체식단</h2>
-      <table class="__se_tbl_ext" border="1" align="center" style="border-collapse: collapse;">
-    <tr>
-      <th>일차</th><th>날짜</th><th>구분</th><th>제공업체</th><th>메뉴</th></tr>
-      <td rowspan="3">1일차</td><td rowspan="3">4/15</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>아리랑</td><td>낙지볶음,콩나물국,버섯탕수육,브로컬리,단호박셀러드,김치</td></tr>
-      <td>석식</td><td>최고집</td><td>제육볶음,멸치땅콩조림,느타리버섯볶음,해물파전,미역국</td></tr>
-    <tr>
-    <td rowspan="3">2일차</td><td rowspan="3">4/16</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-    <tr>
-      <td>중식</td><td>아리랑</td><td>비빔밥,소고기무국,꼬막무침,겉저리김치,소세지야채볶음,떡볶이</td></tr>
-      <td>석식</td><td>최고집</td><td>카레라이스,단무지무침,장아찌,양상추샐러드,냉국</td></tr>
-      <tr>
-      <td rowspan="3">3일차</td><td rowspan="3">4/17</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>아리랑</td><td>김치찌개,깍두기,깻잎전,감자샐러드,장조림</td></tr>
-      <td>석식</td><td>최고집</td><td>돼지간장불고기,오징어초무침,달걀찜,가지굴소스볶음,된장국</td></tr>
-      <tr>
-      <td rowspan="3">4일차</td><td rowspan="3">4/18</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>아리랑</td><td>황태해장국,겉절이,깍두기,단호박샐러드,청경채나물,떡볶이</td></tr>
-      <td>석식</td><td>최고집</td><td>쭈꾸미볶음,오뎅볶음,연두부,사라다,콩나물무국</td></tr>
-      <tr>
-      <td rowspan="3">5일차</td><td rowspan="3">4/19</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>아리랑</td><td>돼지불고기,미역국,김치,오이소박이,나물무침,오징어야채볶음</td></tr>
-      <td>석식</td><td>최고집</td><td>탕수육,장아찌,샐러드,잡채,짬뽕탕</td></tr>
-      <tr>
-      <td rowspan="3">6일차</td><td rowspan="3">4/20</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>죽이야기</td><td>소불고기,오징어젓갈,계란말이,깍두기/김치,콩나물냉국,떡갈비,고구마고로케</td></tr>
-      <td>석식</td><td>백년</td><td>깐풍기,사라다,오뎅볶음,호박전,김치,된장찌개</td></tr>
-      <tr>
-      <td rowspan="3">7일차</td><td rowspan="3">4/21</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>죽이야기</td><td>김치제육,잡채,메추리알조림,장조림,오이김치,간장깻잎,오이미역냉국</td></tr>
-      <td>석식</td><td>백년</td><td>코다리조림,호박버섯전,볶음김치,알타리,해물순두부</td></tr>
-      <tr>
-      <td rowspan="3">8일차</td><td rowspan="3">4/22</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>죽이야기</td><td>오징어삼겹살볶음,햄구이,호박전,건새우볶음,참치강된장,김치/깍두기,된장국</td></tr>
-      <td>석식</td><td>백년</td><td>낙지볶음,계란말이,멸치볶음,김치,미역국</td></tr>
-      <tr>
-      <td rowspan="3">9일차</td><td rowspan="3">4/23</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>죽이야기</td><td>닭갈비볶음,돈까스,동그랑땡,감자채볶음,장조림,김치/오이김치,동치미</td></tr>
-      <td>석식</td><td>백년</td><td>탕수육,소세지볶음,잡채,콩나물무침,멸치볶음.,육개장</td></tr>
-      <tr>
-      <td rowspan="3">10일차</td><td rowspan="3">4/24</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>죽이야기</td><td>돼지갈비,양배추쌈,오징어초회무침,계란조림,김치,깍두기,도시락김,미역국</td></tr>
-      <td>석식</td><td>백년</td><td>돈까스,떡볶이,김치전,메추리알,김치찌개</td></tr>
-      <tr>
-      <td rowspan="3">11일차</td><td rowspan="3">4/25</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>대어</td><td>일본식소고기볶음,부추전,두부조림,미역국,김치</td></tr>
-      <td>석식</td><td>방도남</td><td>비지찌게,호박전,잡채,생선,김치</td></tr>
-      <tr>
-      <td rowspan="3">12일차</td><td rowspan="3">4/26</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>대어</td><td>함박스테이크+소스,콩나물국,감자볶음,김치전,계란말이</td></tr>
-      <td>석식</td><td>방도남</td><td>북어국,오징어초무침,간장수육,깻잎,김치</td></tr>
-      <tr>
-      <td rowspan="3">13일차</td><td rowspan="3">4/27</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>대어</td><td>유부초밥,장국,돈까스,멸치볶음</td></tr>
-      <td>석식</td><td>방도남</td><td>감자탕,닭강정,생선,계란말이,김치</td></tr>
-      <tr>
-      <td rowspan="3">14일차</td><td rowspan="3">4/28</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-      <td>중식</td><td>대어</td><td>김밥,시래기국,고등어조림,오이무침</td></tr>
-      <td>석식</td><td>방도남</td><td>김치국,주물럭,생선,부추전,김치</td></tr>
-      <tr>
-      <td rowspan="3">15일차</td><td rowspan="3">4/29</td><td>조식</td><td>호텔</td><td>호텔식</td></tr>
-      <tr>
-    </table>
+      <div class="image-box">
+        <img src="0501menu.png">
+      </div>
 </body>
